Brink Theme/Brink.css
/* ... */
.more-content table {
	padding: 9px 15px 12px !important;
}

.list-table .more-info .more-content a {
	color: hsl(var(--text));
	text-decoration: underline hsla(var(--text), 50%) !important;
} .list-table .more-info .more-content a:hover {
	color: hsl(var(--textLinkHov));
}


/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @Loading-Icon
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

.list-unit .loading-space {
	height: auto;
	padding-top: 18px;
	margin: 0;
}

.list-unit .loading-space i {
	width: 24px;
	height: 24px;
	background: url(https://files.catbox.moe/qs9f3v.svg) center / auto no-repeat;
	margin: 0 auto;
	
	font-size: 0;
	animation: 1.2s cubic-bezier(.35,0,.35,1) 0s infinite both loading;
}

@keyframes loading {
	from {
		transform: rotate(45deg);
	} to {
		transform: rotate(405deg);
	}
}


/*==============================*\
  !OVERLAYS
\*------------------------------*/

#fancybox-overlay {
	background: #000 !important;
	opacity: 0.78 !important;
}

body #fancybox-close {
	box-shadow: none;
}

#fancybox-close::before {
	content: "Close";
}

/* Header bars */

#advanced-options::before,
.mal-modal-content::before {
	content: "";
	position: absolute;
	top: -2px;
	left: 0;
	
	width: 100%;
	height: 2px;
	background: linear-gradient(to right, hsla(var(--accent), 1), hsla(var(--accent), 0.55)) hsl(var(--bg));
}


/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @GDPR
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

#gdpr-modal-bottom .modal-wrapper {
	filter: invert(0.9) hue-rotate(180deg);
	width: 100%;
	margin: 0;
}

.dark-mode #gdpr-modal-bottom .modal-wrapper {
	filter: none;
}

#gdpr-modal-bottom .text {
	width: 100%;
}

#gdpr-modal-bottom a {
	color: #1d439b;
}

.dark-mode #gdpr-modal-bottom a {
	color: #abc4ed;
}


/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @Streaming
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

.mal-modal,
.mal-modal-backdrop {
	transition-duration: var(--timeMenu) !important;
	transition-timing-function: var(--bezierSmooth) !important;
}
.mal-modal-backdrop.show {
	opacity: 0.78 !important;
}

.mal-modal-content button.btn-close {
	color: var(--text) !important;
}

.mal-modal-content {
	color: hsl(var(--text)) !important;
	background: hsl(var(--bg)) !important;
	border: none !important;
	border-radius: 0 !important;
	box-shadow: -1.6px 2.24px 4.48px hsla(0, 0%, 0%, 70%);
}

.mal-modal-header,
.mal-modal-body .broadcasts {
	border-color: hsla(var(--text), 12%) !important;
}

.broadcast a:hover {
	background: hsl(var(--bgAlt)) !important;
}


/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @iFrames
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

body #fancybox-wrap {
	left: calc(50% - (190px + 20vw)) !important;
	width: calc(380px + 40vw) !important;
	height: auto !important;
	padding: 0;
}

#fancybox-outer .fancy-bg {
	display: none;
}

body #fancybox-outer {
	padding: 14px 12px 56px;
	background: hsl(var(--bg));
	border-radius: 8px;
	box-shadow: -1.6px 2.24px 4.48px hsla(0, 0%, 0%, 70%);
}

body #fancybox-inner {
	position: static;
	width: 100% !important;
	border-radius: 4px;
}

body #fancybox-frame {
	filter:
		sepia(20%)
		invert(91.5%);
}

#fancybox-outer #fancybox-close {
	top: auto;
	bottom: 12px;
	right: 20px;
}


/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @Rewatch-Box
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

.ownlist #fancybox-wrap:not([style*="width: 1000px;"]) {
	left: calc(50% - 160px) !important;
	width: auto !important;
	height: auto !important;
}

#fancybox-wrap:not([style*="width: 1000px;"]) #fancybox-close {
	display: none !important;
}

#fancybox-wrap:not([style*="width: 1000px;"]) #fancybox-outer {
	padding: 12px;
}

#fancybox-wrap:not([style*="width: 1000px;"]) #fancybox-inner {
	width: auto !important;
	height: auto !important;
}

div[style^="width: 300px;"] {
	width: 100% !important;
	height: 100% !important;
	font: 0/0 var(--font) !important;
}

div[style^="width: 300px;"]::before {
	content: 'Finished rewatching?';
	color: hsla(var(--text), 88%);
	font-size: 14px;
	line-height: 1;
}

div[style^="width: 300px;"] div {
	display: flex;
	margin-top: 9px !important;
}

div[style^="width: 300px;"] input {
	width: auto;
	padding: 0 12px;
	font-family: inherit;
	cursor: pointer;
	text-transform: capitalize;
} div[style^="width: 300px;"] input + input {
	margin-left: 9px;
}


/* ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~*\
  @Filter-Menu
\*~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ */

#advanced-options {
	position: fixed;
	top: calc(50px + 10vh);
	
	--pad: 100vw;
	width: calc(630px + 0.111 * (var(--pad) - 700px));
	min-width: 630px;
	max-width: 730px;
	height: auto;
	padding: 0 calc(40px + 0.05 * (var(--pad) - 700px)) 12px;
	background: hsl(var(--bg));
	box-shadow: -1.6px 2.24px 4.48px hsla(0, 0%, 0%, 70%);
	border: none;
	
	color: hsla(var(--text), 88%);
	font-family: var(--font);
}

@media (min-width: 1600px) {
	#advanced-options {
		--pad: 1600px;
	}
}

#advanced-options #fancybox-close {
	top: auto;
	bottom: 24px;
	right: calc(40px + 0.05 * (var(--pad) - 700px));
}

#advanced-options div {
	padding: 12px 0;
}

#advanced-options .advanced-options-header {
	width: 100%;
	height: 32px;
	border: none;
	
	font-size: 15px;
	line-height: 28px;
	text-align: left;
	text-transform: uppercase;
}

#advanced-options .advanced-options-header .description {
	display: none;
}

#advanced-options .sort-widget,
#advanced-options .filter-widget {
	display: flex;
	width: 100%;
	padding: 12px 12px 0 108px;
}

#advanced-options .sort-widget:last-of-type,
#advanced-options .filter-widget:last-of-type {
	padding-bottom: 12px;
}

#advanced-options .sort-widget .widget-header,
#advanced-options .filter-widget .widget-header {
	width: 108px;
	padding-left: 12px;
	margin-left: -108px;
	flex: 0 0 auto;
	font: 13px/22px var(--font);
}
/* ... */

